--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    width: 700px;
+    margin: auto;
+}
 a {
     text-decoration: none;
     color: black;
@@ -7,7 +11,7 @@ a:visited {
     color: black;
 }
 a:hover {
-    font-size: 125%;
+    color: red;
 }
 img {
     border-radius: 10px;
